# movmf

./: LICENSE  README.md  pyproject.toml
examples/: fit_gmm.ipynb
src/movmf/: __init__.py  cluster.py  mixture_model.py  util.py
tests/: test_gmm.py
